Fix text alignment for about

--- a/src/App.css
+++ b/src/App.css
@@ -84,7 +84,7 @@ section {
   flex-direction: column;
 }
 
-section p {
+#about p {
   width: 550px;
   text-align: center;
 }
